# fixnames

./: LICENSE  README.md  main.py  pyproject.toml
fixnames/: __init__.py
