[tool.poetry]
name = "fixnames"
version = "0.1.0"
description = ""
authors = ["faith <jamienibtong@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parse-torrent-title = "^2.8.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fixnames = "fixnames:main"
